# eledata

./: README.md  pyproject.toml  test.sh
examples/: first.eld
src/eledata/: __main__.py  reader.py  writer.py
